# playground-obw365tb

./: statement.md  techio.yml
c-project/: CMakeLists.txt  angle.cpp  angle.h  fonction42.cpp  fonction42.h  operators.cpp  operators.h  tests.cpp
markdowns/: operators.md  underconstruction.md  welcome.md
projects/1/: CMakeLists.txt
